<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="30dp"
    tools:context=".view.UserLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/allerta"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/second"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvValidation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/allerta"
            android:text="@string/validation"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                app:boxStrokeColor="@color/second"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/second"
                app:hintTextColor="@color/second"
                app:startIconDrawable="@drawable/username_foreground"
                app:startIconTint="@color/second">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/allerta"
                    android:inputType="textPersonName"
                    android:textColor="@color/second" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:boxStrokeColor="@color/second"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/second"
                app:hintTextColor="@color/second"
                app:startIconDrawable="@drawable/password_foreground"
                app:startIconTint="@color/second">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/allerta"
                    android:inputType="textPassword"
                    android:textColor="@color/second" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <CheckBox
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/second"
                    android:text="@string/remember_me"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/second"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:text="@string/forget_password"
                    android:textAllCaps="false"
                    android:textColor="@color/second"
                    android:textSize="16sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/success"
                android:lineSpacingExtra="18sp"
                android:text="@string/loginbutton"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>

