...
            android:id="@+id/textOffer"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textInvoice"
            android:layout_marginStart="102dp"
            android:layout_marginBottom="-53dp"
            android:layout_toEndOf="@+id/textClaimNum"
            android:text="@string/text_offer"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/nav_bar" />

        <TextView
...
