...
                app:boxStrokeColor="@color/second"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/second"
>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvAddComment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/allerta"
                    android:textColor="@color/second"
                    android:inputType="textMultiLine"
                    android:lines="4"/>
...
